# src/routers/departments.route.js
@@ -7,14 +7,16 @@ const DepartmentController = require('../controllers/departments/department.cont
 
 const departmentsController = new DepartmentController();
 
-router.get('/hemis/fetch-department', authMiddleware.adminMiddleware, departmentsController.fetchDepartments);
+router.get('/fetch-departments', authMiddleware.adminMiddleware, departmentsController.fetchDepartments);
 
-router.get('/get-department', authMiddleware.adminMiddleware, departmentsController.getDepartment);
+
+router.get('/get-department/:id', authMiddleware.adminMiddleware, departmentsController.getDepartment);
+
 
 router.get('/get-departments', authMiddleware.adminMiddleware, departmentsController.getAllDepartment);
 
 router.put('/update-department/:departmentId', authMiddleware.adminMiddleware, upload.fields([
-    {name: 'image', maxCount: 2}
+    {name: 'image', maxCount: 1}
 ]), departmentsController.updateDepartment);
 
 
